--- a/contacts-app/index.html
+++ b/contacts-app/index.html
@@ -5,17 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contacts</title>
         <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-        <link id="basicStyle" type="text/css" rel="stylesheet" href="styles.css">
-        <link id="mdlStyle" rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.lime-light_green.min.css" />
-        <link id="overrides" type="text/css" rel="stylesheet" href="mdl-overrides.css">
+        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.lime-light_green.min.css" />
+        <link type="text/css" rel="stylesheet" href="mdl-customizations.css">
     </head>
     <body class="mdl-color--grey-900">
         <main id="app"
               class="content-grid centered mdl-layout mdl-layout__content mdl-js-layout mdl-grid mdl-grid--no-spacing">
             <div class="mdl-cell mdl-cell--12-col">
                 <h1 class="mdl-color-text--lime-A400">New Contact</h1>
-                <form id="add_contact_form" action="?" method="post" title="Type 'clear' to first name field to remove
-                local storage.">
+                <form id="add_contact_form" action="?" method="post">
                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                         <label class="mdl-textfield__label mdl-color-text--grey-600" for="firstName">First name</label>
                         <input class="mdl-textfield__input mdl-color-text--lime-A400" type="text"
@@ -67,7 +65,13 @@
                 </table>
             </div>
         </main>
-        <script id="mdlJS" defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-        <script src="scripts.js"></script>
+        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+        <script src="libs/lodash.min.js"></script>
+        <script src="js/custom-event-polyfill.js"></script>
+        <script src="js/app.js"></script>
+        <script src="js/utilities.js"></script>
+        <script src="js/data-storage.js"></script>
+        <script src="js/ui.js"></script>
+        <script src="js/event-bindings.js"></script>
     </body>
 </html>
